# config/swagger.json
@@ -670,6 +670,72 @@
             }
         },
 
+        "/searchEmployeeResourceSkillsAllRatingForBU/CategoryId={CategoryId}/SkillId={SkillId}/Rating={Rating}/Availability={Availability}/buid={buid}": {
+            "get": {
+                "tags": [
+                    "TMS Employee Details"
+                ],
+                "operationId": "searchEmployeeResourceSkillsForHR_getById",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "CategoryId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    {
+                        "name": "SkillId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Rating",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Availability",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "buid",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Contact"
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+
         "/searchEmployeeResourceSkillsAllStatusForHR/CategoryId={CategoryId}/SkillId={SkillId}/Rating={Rating}/Availability={Availability}": {
             "get": {
                 "tags": [
@@ -728,6 +794,72 @@
             }
         },
 
+        "/searchEmployeeResourceSkillsAllStatusForBU/CategoryId={CategoryId}/SkillId={SkillId}/Rating={Rating}/Availability={Availability}/buid={buid}": {
+            "get": {
+                "tags": [
+                    "TMS Employee Details"
+                ],
+                "operationId": "searchEmployeeResourceSkillsAllStatusForHR_getById",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "CategoryId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    {
+                        "name": "SkillId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Rating",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Availability",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "buid",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Contact"
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+
         "/searchEmployeeResourceSkillsAllRatingAndStatusForHR/CategoryId={CategoryId}/SkillId={SkillId}/Rating={Rating}/Availability={Availability}": {
             "get": {
                 "tags": [
@@ -765,6 +897,72 @@
 
                     {
                         "name": "Availability",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Contact"
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+
+        "/searchEmployeeResourceSkillsAllRatingAndStatusForBU/CategoryId={CategoryId}/SkillId={SkillId}/Rating={Rating}/Availability={Availability}/buid={buid}": {
+            "get": {
+                "tags": [
+                    "TMS Employee Details"
+                ],
+                "operationId": "searchEmployeeResourceSkillsAllRatingAndStatusForHR_getById",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "CategoryId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    {
+                        "name": "SkillId",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Rating",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "Availability",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+
+                    {
+                        "name": "buid",
                         "in": "path",
                         "required": true,
                         "type": "integer",
